[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/console.png" type="Texture" id=1]
[ext_resource path="res://shared/ship_subsystems/captain.gd" type="Script" id=2]
[ext_resource path="res://shared/ship_subsystems/chair.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/warning.ogg" type="AudioStream" id=4]
[ext_resource path="res://shared/ship_subsystems/velocity_vector.gd" type="Script" id=5]
[ext_resource path="res://shared/ship_subsystems/subsystem_theme.tres" type="Theme" id=6]
[ext_resource path="res://shared/ship_subsystems/damage_effects/sparks.tscn" type="PackedScene" id=7]

[node name="captain" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0.356871, -20.4533 )
texture = ExtResource( 1 )

[node name="chair" parent="." instance=ExtResource( 3 )]

[node name="warning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="console" type="Node2D" parent="."]
z_index = 2048

[node name="panel" type="PanelContainer" parent="console"]
light_mask = -2147483647
margin_left = -228.461
margin_top = -127.0
margin_right = -23.4614
margin_bottom = -32.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_vbox" type="VBoxContainer" parent="console/panel"]
margin_left = 107.0
margin_right = 205.0
margin_bottom = 95.0
size_flags_horizontal = 8

[node name="velocity" type="Label" parent="console/panel/right_vbox"]
margin_right = 98.0
margin_bottom = 34.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "velocity: 69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_vbox" type="VBoxContainer" parent="console/panel"]
margin_right = 44.0
margin_bottom = 95.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x_pos" type="Label" parent="console/panel/left_vbox"]
margin_right = 44.0
margin_bottom = 34.0
size_flags_horizontal = 0
text = "X: 69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y_pos" type="Label" parent="console/panel/left_vbox"]
margin_top = 38.0
margin_right = 44.0
margin_bottom = 72.0
size_flags_horizontal = 0
text = "Y: 69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="direction" type="Polygon2D" parent="console/panel"]
position = Vector2( 103, 72 )
scale = Vector2( 3, 3 )
polygon = PoolVector2Array( -1, 5, -1, -1, -4, -1, 0, -5, 4, -1, 1, -1, 1, 5 )

[node name="velocity_vector" type="Node2D" parent="console/panel"]
position = Vector2( 150.212, 54.7193 )
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="sparks" parent="." instance=ExtResource( 7 )]
